Fix: 프로젝트 깃허브 링크 overflow 해결

--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ i {
   margin-right: 10px;
 }
 
+.fa-github {
+  display: inline;
+}
+
 ul {
   list-style: none;
 }
@@ -131,15 +135,17 @@ hr {
 }
 
 .links {
-  margin-bottom: 3.5rem;
+  margin-bottom: 2rem;
 }
 
 .links > li {
   padding: 0;
+  margin: 5px 0;
 }
 
 .links a {
   text-decoration: underline;
+  overflow-wrap: break-word;
 }
 
 @media all and (max-width: 767px) {
